--- a/src/pages/main/main.css
+++ b/src/pages/main/main.css
@@ -1,73 +1,101 @@
-form{
-    padding: 20px 25px;
-    margin-bottom: 20px;
-    display:flex;
-    flex-direction: row;
+form {
+	padding: 20px 25px;
+	margin-bottom: 20px;
+	display: flex;
+	flex-direction: row;
 }
 
-img{
-    max-width:40px;
-    margin-right: 20px;
+img {
+	max-width: 40px;
+	margin-right: 20px;
 }
 
 form input {
-    height: 40px;
-    width: 90%;
-    font-size: 15px;
-    border-radius: 6px;
-    border: 1px solid #eee;
-    margin-right: 10px;
-    padding: 0 15px;
-    color:#666;
+	height: 40px;
+	width: 90%;
+	font-size: 15px;
+	border-radius: 6px;
+	border: 1px solid #eee;
+	margin-right: 10px;
+	padding: 0 15px;
+	color: #666;
 }
 
-form button{
-    border: 0;
-    width: 40px;
-    height: 40px;
-    border-radius: 4px;
-    background-color: #7159c1;
-    cursor: pointer;
-    display: flex;
-    -webkit-box-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    align-items: center;
+form button {
+	border: 0;
+	width: 40px;
+	height: 40px;
+	border-radius: 4px;
+	background-color: #7159c1;
+	cursor: pointer;
+	display: flex;
+	-webkit-box-pack: center;
+	justify-content: center;
+	-webkit-box-align: center;
+	align-items: center;
+}
+
+form button:hover {
+	background-color: #6c50c9;
+	transition: 0.2s ease-in;
 }
 
 ul {
-    list-style: none;
-    flex:1
+	list-style: none;
+	flex: 1;
 }
 
-ul li{
-    padding: 0 15px;
-    clear: both;
+ul li {
+	padding: 0 15px;
+	clear: both;
 }
 
-ul li a{
-    flex-direction: column;
-    margin-bottom: 20px;
+ul li a {
+	flex-direction: column;
+	margin-bottom: 20px;
+	font-weight: bold;
+    text-decoration: none;
+    color:#7159c1;
+}
+
+ul li a:hover {
+	color: #6c50c9;
 }
 
 ul li img {
-    min-width: 150px;
-    border-radius: 10px;
-    float: left;
-    margin-bottom: 20px;
+	min-width: 150px;
+	border-radius: 10px;
+	float: left;
+	margin-bottom: 20px;
 }
 
-ul li p{
-    margin: 20px 0;
+ul li p {
+	margin: 20px 0 45px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    color: rgb(77, 77, 77);
 }
 
-ul li strong{
-    font-size: 18px;
+ul li strong {
+	font-size: 18px;
     font-weight: bold;
+    color: rgb(48, 48, 48);
 }
 
-@media (max-width: 480px){
-    ul li a{
-        color:red;
-    }
+.pb-70 {
+	padding-bottom: 70px;
+}
+
+@media (max-width: 480px) {
+	ul li {
+		display: grid;
+		justify-content: center;
+	}
+
+	ul li img {
+		justify-self: center;
+	}
 }
